优化post连接方式，改为发送和接收各用一个请求